fix spacing and visibility of checkbox

--- a/src/views/Exchange/Exchange.css
+++ b/src/views/Exchange/Exchange.css
@@ -16,6 +16,9 @@
 .Exchange-should-show-position-lines {
   font-size: 1.4rem;
 }
+.Exchange-should-show-position-lines .active {
+  opacity: 1;
+}
 
 .Exchange-empty-positions-list-note {
   padding-bottom: 0.465rem;
@@ -842,7 +845,19 @@ table.Exchange-list-small td {
   background: none;
   border: none;
   color: white;
+  padding: 0;
 }
+.cancel-order-btn:hover {
+  opacity: 0.8;
+}
+
+.chart-positions:hover {
+  opacity: 0.8;
+}
+.chart-positions.span:hover {
+  opacity: 1;
+}
+
 .al-swap .Tooltip-popup {
   min-width: 25rem;
 }
